# cloud-api-adaptor

./: .dockerignore  .gitignore  .golangci.yaml  .govulncheck-ignore.toml  .lycheeignore  CITATION.cff  CODEOWNERS  DCO1.1.txt  Dockerfile  Makefile  Makefile.defaults  README.md  entrypoint.sh  flake.nix  go.mod  go.sum  renovate.json  versions.yaml
.devcontainer/: README.md  devcontainer.json
.devcontainer/development/: Dockerfile  devcontainer.json  uplosi_azure_notes.md
.github/: actionlint.yaml  dependabot.yml
.github/workflows/: actionlint.yaml  azure-e2e-test.yml  azure-nightly-build.yml  azure-nightly.yaml  azure-podvm-image-build.yml  azure-podvm-image-nightly-build.yml  azure-podvm-image.yml  azure-podvm-release.yml  build-all.yaml  build-golang-fedora.yaml  build.yaml  caa_build_and_push.yaml  caa_build_and_push_all_arches.yaml  caa_build_and_push_per_arch.yaml  ci_house_keeping.yaml  commit-message-check.yaml  controller.yaml  controllers.yaml  csi_wrapper_images.yaml  daily-e2e-test-ibmcloud-amd64.yaml  daily-e2e-tests-ibmcloud.yaml  daily-e2e-tests-libvirt.yaml  daily-e2e-tests.yaml  dependabot_go_mod_tidy.yaml  e2e_aws.yaml  e2e_azure.yaml  e2e_basic_validation.yaml  e2e_byom.yaml  e2e_docker.yaml  e2e_libvirt.yaml  e2e_on_pull.yaml  e2e_privileged_only.yaml  e2e_run_all.yaml  freeze-window.yaml  image.yaml  lib-codeql.yaml  links.yml  lint.yaml  manual-test-helm.yaml  mgns.yaml  (+34 more)
aws/: README.md  raw-to-ami.sh
aws/deploy/: aws-config-example.yaml
aws/image/: .gitignore  Dockerfile  Makefile  aws-ubuntu.pkr.hcl  copy-files.sh  misc-settings.sh  variables.pkr.hcl
azure/: README.md  build-image.md
azure/image/: .gitignore  Dockerfile  Makefile  azure-ubuntu.pkr.hcl  copy-files.sh  misc-settings.sh  variables.pkr.hcl
ci-infra/azure/: main.tf  outputs.tf  providers.tf
cloud-providers/: go.mod  types.go  util.go
cloud-providers/aws/: imds.go  manager.go  manager_test.go  provider.go  provider_test.go  types.go
cloud-providers/azure/: manager.go  provider.go  types.go
cloud-providers/ibmcloud/: manager.go  provider.go  provider_test.go  types.go
cloud-providers/ibmcloud-powervs/: manager.go  provider.go  types.go
cloud-providers/libvirt/: libvirt.go  libvirt_test.go  manager.go  provider.go  types.go
cloud-providers/util/: k8snode.go  redacting.go  slice.go
cloud-providers/vsphere/: manager.go  provider.go  types.go
cmd/: exit.go  parse.go  parse_test.go  starter.go  starter_test.go  version.go  version_test.go
cmd/agent-protocol-forwarder/: main.go
cmd/cloud-api-adaptor/: aws.go  azure.go  docker.go  ibmcloud.go  ibmcloud_powervs.go  libvirt.go  main.go  vsphere.go
cmd/cluster-provisioner/: main.go
cmd/process-user-data/: main.go  main_test.go  provision.go  types.go  update.go
deploy/: cloud-api-adaptor.yaml
docker/: Dockerfile  Makefile  README.md
docs/: DEVELOPMENT.md  Release-Process.md  addnewprovider.md  architecture.md  consuming-prebuilt-podvm-images.md  policy.md  registries-authentication.md  runtime-key-release.md  tls-proxy-forwarder.md  vminfo.md  vxlan-network-topology.md
docs/troubleshooting/: README.md
gcp/: README.md
gcp/image/: Dockerfile  Makefile  misc-settings.sh
hack/: Dockerfile.golang  build-s390x-image.sh  build.sh  ci-e2e-aws-cleanup.sh  ci-e2e-debug-fail.sh  ci-helper.sh  golangci-lint.sh  govulncheck-filter.py  govulncheck.sh  image-manifest.sh  packer-check.sh  release-helper.sh  terraform-check.sh  update-go-container.sh  yq.sh
hack/ci/: gh_cleanup_images.sh
ibmcloud/: IMPORT_PODVM_TO_VPC.md  README.md  SECURE_EXECUTION.md  TROUBLESHOOTING.md
ibmcloud-powervs/: README.md
ibmcloud-powervs/image/: Makefile  copy-files.sh  prereq.sh
ibmcloud/cluster/: .gitignore  README.md  kube-init.sh  label-nodes.sh  main.tf  outputs.tf  provider.tf  variables.tf
ibmcloud/demo/: nginx.yaml  runtime-class.yaml
ibmcloud/deploy/: ibmcloud-config-example.yaml
ibmcloud/image/: .gitignore  Makefile  build.sh  delete.sh  import.sh  login.sh  multipart_upload.sh  push.sh  verify.sh
ibmcloud/terraform/: .gitignore  README.md  main.tf  provider.tf  variables.tf  version.tf
install/: README.md
install/pre-install-payload/: Dockerfile  (+1 more)
libvirt/: README.md  config_libvirt.sh  install_operator.sh  kcli_cluster.sh
peer-pod-controller/: Makefile  PROJECT  README.md  go.mod  go.sum  main.go
peerpod-ctrl/: Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  main.go
peerpodconfig-ctrl/: Makefile  PROJECT  README.md  go.mod  go.sum  main.go
podvm/: .dummy  Dockerfile.podvm  Dockerfile.podvm.centos  Dockerfile.podvm.rhel  Dockerfile.podvm_binaries  Dockerfile.podvm_binaries.centos  Dockerfile.podvm_binaries.fedora  Dockerfile.podvm_binaries.rhel  Dockerfile.podvm_builder  Dockerfile.podvm_builder.centos  Dockerfile.podvm_builder.fedora  Dockerfile.podvm_builder.rhel  Dockerfile.podvm_builder.rhel_z  Makefile  Makefile.defaults  Makefile.image  Makefile.inc  README.md  go.mod
podvm-mkosi/: .gitignore  Dockerfile  Makefile  README.md  mkosi.conf  mkosi.postinst
provider/: go.mod  go.sum  table.go  types.go  types_test.go  util.go
skr-api/: Cargo.toml  Dockerfile  Makefile  README.md  build.rs
skr-api/attester/: Cargo.toml
skr-api/attester/src/: main.rs
skr-api/protos/: platform.proto
skr-api/skr-api/: Cargo.toml  build.rs
skr-api/skr-api/src/: main.rs
skr-api/src/: attester.rs  skr-api.rs
vsphere/: README.md  vmdk-to-ovf.sh
webhook/: .gitignore  Dockerfile  Makefile  PROJECT  README.md  go.mod  go.sum  main.go
(+1506 files in other folders)
