[workspace]
members = [
	"attester",
	"skr-api",
]

[workspace.dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.10", features = ["derive"] }
prost = "0.11.9"
tokio = { version = "1.29.1", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tonic = "0.9.2"
tonic-build = "0.9.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
