[package]
name = "attester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
attester = { git = "https://github.com/mkulke/guest-components.git", rev = "cf13add" }
prost.workspace = true
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
