[package]
name = "attester"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
attester = { git = "https://github.com/confidential-containers/guest-components.git", rev = "709a6b0" }
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
prost.workspace = true
tokio-stream = { version = "0.1.14", features = ["net"] }
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
