[package]
name = "skr-api"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait = "0.1.70"
axum = "0.6.18"
clap.workspace = true
prost.workspace = true
serde = { version = "1.0.166", features = ["derive"] }
tokio.workspace = true
tonic.workspace = true
tower-http = { version = "0.4.1", features = ["trace"] }
tracing.workspace = true
tracing-subscriber.workspace = true
kbs_protocol = { git = "https://github.com/mkulke/guest-components.git", rev = "cf13add", default-features = false, features =[ "rust-crypto" ] }
attester = { git = "https://github.com/mkulke/guest-components.git", rev = "cf13add", default-features = false }
tower = { version = "0.4.13", features = ["tokio", "tokio-stream"] }

[build-dependencies]
tonic-build.workspace = true
